@@ -1,6 +1,12 @@
 plugins {
     id 'java'
+    id 'jacoco'
     id 'com.github.johnrengelman.shadow' version '7.1.0'
+}
+
+jacoco {
+    toolVersion "0.8.12"
+    reportsDirectory = layout.buildDirectory.dir('jacoco')
 }
 
 dependencies {
@@ -20,12 +26,27 @@ dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter:5.9.2'
     testImplementation 'org.mockito:mockito-core:5.0.0'
     testImplementation 'org.mockito:mockito-junit-jupiter:5.0.0'
+    testImplementation 'org.junit-pioneer:junit-pioneer:2.2.0'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.9.2'
 }
 
 test {
+    jvmArgs '--add-opens', 'java.base/java.util=ALL-UNNAMED'
+    jvmArgs '--add-opens', 'java.base/java.lang=ALL-UNNAMED'
     useJUnitPlatform()
+    finalizedBy jacocoTestReport // report is always generated after tests run
 }
+
+jacocoTestReport {
+    reports {
+        xml.required = true
+        csv.required = false
+        html.required = false
+    }
+    dependsOn test // tests are required to run before generating the report
+}
+
+
 shadowJar {
     mergeServiceFiles()
     manifest {
